# pp-terminal

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  bandit.yaml  config.schema.json  mypy.ini  patch_ppxml2db.diff  pylintrc  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-code.yml  ci.yml  verify-app.yml
pp_terminal/: attribute_type_converter.py  column_utils.py  config.py  config.schema.json  df_filter.py  exceptions.py  helper.py  main.py  mcp_server.py  options.py  output.py  plugins.py  portfolio.py  portfolio_service.py  portfolio_snapshot.py  pp_portfolio_builder.py  pp_portfolio_service_adapter.py  ppxml2db_wrapper.py  schemas.py  table_decorator.py  validation_engine.py  validation_rules.py
pp_terminal/commands/: export.py  export_anonymized.py  list_accounts.py  list_securities.py  simulate_interest.py  simulate_interest_rate.py  simulate_share_sell.py  simulate_vap.py  simulate_vorabpauschale.py  validate.py  validation_rules.py  view_accounts.py  view_deposit_accounts.py  view_depots.py  view_securities.py  view_securities_accounts.py  view_taxonomies.py
pp_terminal/data/: attribute_type_converter.py  cost_basis.py  filters.py  pp_portfolio_builder.py  tax.py  xml_anonymizer.py
pp_terminal/domain/: cost_basis.py  portfolio.py  portfolio_snapshot.py  schemas.py  (+2 more)
tests/: conftest.py  test_attribute_type_conversion.py  test_cache_utils.py  test_exempt_rate_validation.py  test_helper.py  test_portfolio.py  test_portfolio_service.py  test_pp_portfolio_builder.py  test_pp_portfolio_service_adapter.py  test_xml_anonymizer.py
(+76 files in other folders)
