[project]
name = "pp-terminal"
version = "0.2.0"
description = "The Analytic Companion for Portfolio Performance"
authors = [{ name = "Christoph Massmann", email = "chris@dev-investor.de" }]
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pandera (>=0.22.1,<0.23.0)",
    "ppxml2db @ git+https://github.com/ma4nn/ppxml2db",
]
scripts = { pp-terminal = "pp_terminal.main:app" }
entry-points = { "pp_terminal.commands" = { "view.deposit_accounts" = "pp_terminal.commands.view_deposit_accounts:app", "view.securities_accounts" = "pp_terminal.commands.view_securities_accounts:app", "simulate.vorabpauschale" = "pp_terminal.commands.simulate_vorabpauschale:app" } }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
ppxml2db = {develop = true}

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
mypy = "^1.14.1"

